feat: add users with api tokens
